<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="processesprojectt.feedme.CookBookButton" >
    <item android:id="@+id/action_profile"
        android:icon="@mipmap/ic_action_user"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_calender"
        android:icon="@mipmap/ic_action_go_to_today"
        android:title="@string/action_calender"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_cookbook"
        android:icon="@mipmap/book_1"
        android:title="@string/action_cookbook"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:icon="@mipmap/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom|withText" />

</menu>
